--- a/views/gallery.html
+++ b/views/gallery.html
@@ -49,124 +49,124 @@
                 <img class="banner__bannerImg" src="../images/banners/banner03.jpg" alt="Imagen de portada">
             </section>
     
-            <section class="container-fluid" id="containerGalleryPhotos">
+            <section class="galleryPhotos container-fluid">
                 <div class="row">
                     <div class="col">
-                        <h2 class="tituloSeccion">Photos</h2>
+                        <h2 class="galleryPhotos__title">Photos</h2>
                     </div>
                 </div>
                 <div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-6">
                     <div class="col">
                         <a href="#">
-                            <img class="miniPhotoGallery" src="../images/photos/mini001.png" alt="Foto 1">
+                            <img class="galleryPhotos__photo" src="../images/photos/mini001.png" alt="Foto 1">
                         </a>
                     </div>
                     <div class="col">
                         <a href="#">
-                            <img class="miniPhotoGallery" src="../images/photos/mini002.png" alt="Foto 2">
+                            <img class="galleryPhotos__photo" src="../images/photos/mini002.png" alt="Foto 2">
                         </a>
                     </div>
                     <div class="col">
                         <a href="#">
-                            <img class="miniPhotoGallery" src="../images/photos/mini003.png" alt="Foto 3">
+                            <img class="galleryPhotos__photo" src="../images/photos/mini003.png" alt="Foto 3">
                         </a>
                     </div>
                     <div class="col">
                         <a href="#">
-                            <img class="miniPhotoGallery" src="../images/photos/mini004.png" alt="Foto 4">
+                            <img class="galleryPhotos__photo" src="../images/photos/mini004.png" alt="Foto 4">
                         </a>
                     </div>
                     <div class="col">
                         <a href="#">
-                            <img class="miniPhotoGallery" src="../images/photos/mini005.png" alt="Foto 5">
+                            <img class="galleryPhotos__photo" src="../images/photos/mini005.png" alt="Foto 5">
                         </a>
                     </div>
                     <div class="col">
                         <a href="#">
-                            <img class="miniPhotoGallery" src="../images/photos/mini006.png" alt="Foto 6">
+                            <img class="galleryPhotos__photo" src="../images/photos/mini006.png" alt="Foto 6">
                         </a>
                     </div>
                     <div class="col">
                         <a href="">
-                            <img class="miniPhotoGallery" src="../images/photos/mini007.png" alt="Foto 7">
+                            <img class="galleryPhotos__photo" src="../images/photos/mini007.png" alt="Foto 7">
                         </a>
                     </div>
                     <div class="col">
                         <a href="">
-                            <img class="miniPhotoGallery" src="../images/photos/mini008.png" alt="Foto 8">
+                            <img class="galleryPhotos__photo" src="../images/photos/mini008.png" alt="Foto 8">
                         </a>
                     </div>
                     <div class="col">
                         <a href="">
-                            <img class="miniPhotoGallery" src="../images/photos/mini009.png" alt="Foto 9">
+                            <img class="galleryPhotos__photo" src="../images/photos/mini009.png" alt="Foto 9">
                         </a>
                     </div>
                     <div class="col">
                         <a href="">
-                            <img class="miniPhotoGallery" src="../images/photos/mini010.png" alt="Foto 10">
+                            <img class="galleryPhotos__photo" src="../images/photos/mini010.png" alt="Foto 10">
                         </a>
                     </div>
                     <div class="col">
                         <a href="">
-                            <img class="miniPhotoGallery" src="../images/photos/mini011.png" alt="Foto 11">
+                            <img class="galleryPhotos__photo" src="../images/photos/mini011.png" alt="Foto 11">
                         </a>
                     </div>
                     <div class="col">
                         <a href="">
-                            <img class="miniPhotoGallery" src="../images/photos/mini012.png" alt="Foto 12">
+                            <img class="galleryPhotos__photo" src="../images/photos/mini012.png" alt="Foto 12">
                         </a>
                     </div>
                     <div class="col">
                         <a href="">
-                            <img class="miniPhotoGallery" src="../images/photos/mini013.png" alt="Foto 13">
+                            <img class="galleryPhotos__photo" src="../images/photos/mini013.png" alt="Foto 13">
                         </a>
                     </div>
                     <div class="col">
                         <a href="">
-                            <img class="miniPhotoGallery" src="../images/photos/mini014.png" alt="Foto 14">
+                            <img class="galleryPhotos__photo" src="../images/photos/mini014.png" alt="Foto 14">
                         </a>
                     </div>
                     <div class="col">
                         <a href="">
-                            <img class="miniPhotoGallery" src="../images/photos/mini015.png" alt="Foto 15">
+                            <img class="galleryPhotos__photo" src="../images/photos/mini015.png" alt="Foto 15">
                         </a>
                     </div>
                     <div class="col">
                         <a href="">
-                            <img class="miniPhotoGallery" src="../images/photos/mini016.png" alt="Foto 16">
+                            <img class="galleryPhotos__photo" src="../images/photos/mini016.png" alt="Foto 16">
                         </a>
                     </div>
                     <div class="col">
                         <a href="">
-                            <img class="miniPhotoGallery" src="../images/photos/mini017.png" alt="Foto 17">
+                            <img class="galleryPhotos__photo" src="../images/photos/mini017.png" alt="Foto 17">
                         </a>
                     </div>
                     <div class="col">
                         <a href="">
-                            <img class="miniPhotoGallery" src="../images/photos/mini018.png" alt="Foto 18">
+                            <img class="galleryPhotos__photo" src="../images/photos/mini018.png" alt="Foto 18">
                         </a>
                     </div>
                 </div>
             </section>
 
-            <div class="container-fluid" id="containerGalleryVideos">
+            <div class="galleryVideos container-fluid">
                 <div class="row">
                     <div class="col">
-                        <h2 class="tituloSeccion">Videos</h2>
+                        <h2 class="galleryVideos__title">Videos</h2>
                     </div>
                 </div>
                 <div class="row row-cols-1 row-cols-sm-2">
                     <div class="col">
-                        <iframe class="video" src="https://www.youtube-nocookie.com/embed/El90OBILFBw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe class="galleryVideos__video" src="https://www.youtube-nocookie.com/embed/El90OBILFBw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div class="col">
-                        <iframe class="video" src="https://www.youtube-nocookie.com/embed/egWWlzg-aFg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe class="galleryVideos__video" src="https://www.youtube-nocookie.com/embed/egWWlzg-aFg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div class="col">
-                        <iframe class="video" src="https://www.youtube-nocookie.com/embed/myb4mtzebZg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe class="galleryVideos__video" src="https://www.youtube-nocookie.com/embed/myb4mtzebZg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div class="col">
-                        <iframe class="video" src="https://www.youtube-nocookie.com/embed/Lwk8e2q4qHo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe class="galleryVideos__video" src="https://www.youtube-nocookie.com/embed/Lwk8e2q4qHo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
