--- a/views/music.html
+++ b/views/music.html
@@ -49,86 +49,86 @@
                 <img class="banner__bannerImg" src="../images/banners/banner02.jpg" alt="Imagen de portada">
             </section>
 
-            <section class="container-fluid" id="containerReleasesAndSpotify">
+            <section class="releasesAndSpotify container-fluid">
                 <div class="row row-cols-1 row-cols-md-2">
                     <div class="col">
                         <div class="row">
                             <div class="col">
-                                <h2 class="tituloSeccion">Last Releases</h2>
+                                <h2 class="releasesAndSpotify__title">Last Releases</h2>
                             </div>
                         </div>
                         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2">
                             <div class="col">
-                                <img class="miniCoverReleases" src="../images/music/01.jpg" alt="Album 01">
+                                <img class="releasesAndSpotify__cover" src="../images/music/01.jpg" alt="Album 01">
                             </div>
                             <div class="col">
-                                <img class="miniCoverReleases" src="../images/music/02.jpg" alt="Album 02">
+                                <img class="releasesAndSpotify__cover" src="../images/music/02.jpg" alt="Album 02">
                             </div>
                             <div class="col">
-                                <img class="miniCoverReleases" src="../images/music/03.jpg" alt="Album 03">
+                                <img class="releasesAndSpotify__cover" src="../images/music/03.jpg" alt="Album 03">
                             </div>
                             <div class="col">
-                                <img class="miniCoverReleases" src="../images/music/04.jpg" alt="Album 04">
+                                <img class="releasesAndSpotify__cover" src="../images/music/04.jpg" alt="Album 04">
                             </div>
                         </div>
                     </div>
                     <div class="col">
                         <div class="row">
                             <div class="col">
-                                <h2 class="tituloSeccion">Spotify</h2>
+                                <h2 class="releasesAndSpotify__title">Spotify</h2>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col">
-                                <iframe class="spotifyPlayer" src="https://open.spotify.com/embed/artist/24DO0PijjITGIEWsO8XaPs" width="100%" max-width="500px" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                                <iframe class="releasesAndSpotify__spotifyPlayer" src="https://open.spotify.com/embed/artist/24DO0PijjITGIEWsO8XaPs" width="100%" max-width="500px" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
 
-            <section class="container-fluid" id="containerDiscography">
+            <section class="discography container-fluid">
                 <div class="row">
                     <div class="col">
-                        <h2 class="tituloSeccion">Discography</h2>
+                        <h2 class="discography__title">Discography</h2>
                     </div>
                 </div>
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4">
                     <div class="col">
-                        <img class="miniAlbumHome" src="../images/music/07.jpg" alt="Album 01">
+                        <img class="discography__miniCover" src="../images/music/07.jpg" alt="Album 01">
                     </div>
                     <div class="col">
-                        <img class="miniAlbumHome" src="../images/music/08.jpg" alt="Album 01">
+                        <img class="discography__miniCover" src="../images/music/08.jpg" alt="Album 01">
                     </div>
                     <div class="col">
-                        <img class="miniAlbumHome" src="../images/music/09.jpg" alt="Album 01">
+                        <img class="discography__miniCover" src="../images/music/09.jpg" alt="Album 01">
                     </div>
                     <div class="col">
-                        <img class="miniAlbumHome" src="../images/music/10.jpg" alt="Album 01">
+                        <img class="discography__miniCover" src="../images/music/10.jpg" alt="Album 01">
                     </div>
                     <div class="col">
-                        <img class="miniAlbumHome" src="../images/music/11.jpg" alt="Album 01">
+                        <img class="discography__miniCover" src="../images/music/11.jpg" alt="Album 01">
                     </div>
                     <div class="col">
-                        <img class="miniAlbumHome" src="../images/music/12.jpg" alt="Album 01">
+                        <img class="discography__miniCover" src="../images/music/12.jpg" alt="Album 01">
                     </div>
                     <div class="col">
-                        <img class="miniAlbumHome" src="../images/music/13.jpg" alt="Album 01">
+                        <img class="discography__miniCover" src="../images/music/13.jpg" alt="Album 01">
                     </div>
                     <div class="col">
-                        <img class="miniAlbumHome" src="../images/music/14.jpg" alt="Album 01">
+                        <img class="discography__miniCover" src="../images/music/14.jpg" alt="Album 01">
                     </div>
                     <div class="col">
-                        <img class="miniAlbumHome" src="../images/music/15.jpg" alt="Album 01">
+                        <img class="discography__miniCover" src="../images/music/15.jpg" alt="Album 01">
                     </div>
                     <div class="col">
-                        <img class="miniAlbumHome" src="../images/music/16.jpg" alt="Album 01">
+                        <img class="discography__miniCover" src="../images/music/16.jpg" alt="Album 01">
                     </div>
                     <div class="col">
-                        <img class="miniAlbumHome" src="../images/music/17.jpg" alt="Album 01">
+                        <img class="discography__miniCover" src="../images/music/17.jpg" alt="Album 01">
                     </div>
                     <div class="col">
-                        <img class="miniAlbumHome" src="../images/music/18.jpg" alt="Album 01">
+                        <img class="discography__miniCover" src="../images/music/18.jpg" alt="Album 01">
                     </div>
                 </div>
                 <br><br>
