--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,6 @@ ul {
   margin-top: 100px;
   grid-template-areas: "banner banner banner banner banner banner banner banner banner banner banner banner" "tour tour tour tour tour tour tour tour tour tour tour tour" "music music music music music music music music music music music music" "gallery gallery gallery gallery gallery gallery gallery gallery gallery gallery gallery gallery" "footer footer footer footer footer footer footer footer footer footer footer footer"; }
 
-/* ---------- COMIENZA HEADER SCSS ---------- */
 .header {
   width: 100%;
   height: 100px;
@@ -93,8 +92,6 @@ ul {
       .header__navDesktop a:hover {
         color: #000000; }
 
-/* ---------- TERMINA HEADER SCSS ---------- */
-/* ---------- COMIENZA BANNER SCSS ---------- */
 .banner {
   grid-area: banner; }
   .banner__bannerImg {
@@ -102,8 +99,9 @@ ul {
     max-height: 506px;
     object-fit: cover; }
 
-/* ---------- TERMINA BANNER SCSS ---------- */
-/* ---------- EMPIEZA FOOTER SCSS ---------- */
+.bannerHome {
+  grid-area: banner; }
+
 .footer {
   background-color: #000000;
   color: #FFFFFF;
@@ -140,27 +138,12 @@ ul {
   .footer__upArrow {
     grid-area: upArrow; }
 
-/* ---------- TERMINA FOOTER SCSS ---------- */
-.mainHome {
-  margin-top: 100px; }
-
-/* ---------- COMIENZA BANNER ---------- */
-.bannerHome {
-  grid-area: banner; }
-
-/* ---------- TERMINA BANNER ---------- */
-/* ---------- EMPIEZA SECCION TOUR EN HOME ---------- */
 .sectionTour {
   background-color: #FFFFFF;
   grid-column-start: 2;
   grid-column-end: 12; }
 
-.centerDiv {
-  width: 100%;
-  text-align: center;
-  margin: auto; }
-
-.tituloSeccion, .sectionMusicHome__title--margin, .sectionGalleryHome__title--margin {
+.tituloSeccion, .sectionMusicHome__title--margin, .sectionGalleryHome__title--margin, .galleryPhotos__title, .galleryVideos__title, .releasesAndSpotify__title, .discography__title, .containerContact__title {
   font-family: Poppins;
   font-style: normal;
   color: #000000;
@@ -221,7 +204,6 @@ ul {
   .tourTable__icoTicketMobile {
     display: none; }
 
-/* ---------- TERMINA SECCION TOUR EN HOME ---------- */
 .showMore {
   text-align: center;
   margin-top: 20px;
@@ -239,7 +221,6 @@ ul {
   .showMoreTitle:hover, .sectionMusicHome__showMore a:hover, .sectionGalleryHome__showMore a:hover {
     color: #000000; }
 
-/* ---------- EMPIEZA SECCION DE MUSICA EN HOME ---------- */
 .sectionMusicHome {
   background-color: #F7F7F7;
   grid-area: music;
@@ -285,8 +266,6 @@ ul {
     margin: auto;
     margin-bottom: 16px; }
 
-/* ---------- TERMINA SECCION DE MUSICA EN HOME ---------- */
-/* ---------- EMPIEZA SECCION DE GALERIA EN HOME ---------- */
 .sectionGalleryHome {
   grid-area: gallery;
   display: grid;
@@ -329,8 +308,6 @@ ul {
     margin-top: 20px;
     margin-bottom: 20px; }
 
-/* ---------- TERMINA SECCION DE GALERIA EN HOME ---------- */
-/* ---------- COMIENZA GRID VISTA TOUR ---------- */
 .gridTour {
   width: 100%;
   display: grid;
@@ -340,8 +317,6 @@ ul {
   margin-top: 100px;
   grid-template-areas: "banner banner banner banner banner banner banner banner banner banner banner banner" "tour tour tour tour tour tour tour tour tour tour tour tour" "footer footer footer footer footer footer footer footer footer footer footer footer"; }
 
-/* ---------- TERMINA GRID VISTA TOUR ---------- */
-/* ---------- COMIENZA GRID VISTA MUSICA ---------- */
 .gridMusic {
   width: 100%;
   display: grid;
@@ -351,33 +326,10 @@ ul {
   margin-top: 100px;
   grid-template-areas: "banner banner banner banner banner banner banner banner banner banner banner banner" "releaseAndSpotify releaseAndSpotify releaseAndSpotify releaseAndSpotify releaseAndSpotify releaseAndSpotify releaseAndSpotify releaseAndSpotify releaseAndSpotify releaseAndSpotify releaseAndSpotify releaseAndSpotify" "discography discography discography discography discography discography discography discography discography discography discography discography" "footer footer footer footer footer footer footer footer footer footer footer footer"; }
 
-.sectionDiscography {
-  background-color: #F7F7F7;
-  grid-area: discography;
-  display: grid;
-  grid-template-columns: repeat(14, 1fr);
-  grid-template-rows: auto auto auto;
-  column-gap: 20px;
-  row-gap: 20px;
-  grid-template-areas: "marginLeft title title title title title title title title title title title title marginRight" "marginLeft1 photoLeft1 photoLeft1 photoLeft1 photoLeftMid1 photoLeftMid1 photoLeftMid1 photoRightMid1 photoRightMid1 photoRightMid1 photoRight1 photoRight1 photoRight1 marginRight1" "marginLeft2 photoLeft2 photoLeft2 photoLeft2 photoLeftMid2 photoLeftMid2 photoLeftMid2 photoRightMid2 photoRightMid2 photoRightMid2 photoRight2 photoRight2 photoRight2 marginRight2" "marginLeft3 photoLeft3 photoLeft3 photoLeft3 photoLeftMid3 photoLeftMid3 photoLeftMid3 photoRightMid3 photoRightMid3 photoRightMid3 photoRight3 photoRight3 photoRight3 marginRight3";
-  align-items: center;
-  margin-bottom: 40px; }
-
-.sectionDiscography .tituloSeccion, .sectionDiscography .sectionMusicHome__title--margin, .sectionDiscography .sectionGalleryHome__title--margin {
+.sectionDiscography .tituloSeccion, .sectionDiscography .sectionMusicHome__title--margin, .sectionDiscography .sectionGalleryHome__title--margin, .sectionDiscography .galleryPhotos__title, .sectionDiscography .galleryVideos__title, .sectionDiscography .releasesAndSpotify__title, .sectionDiscography .discography__title, .sectionDiscography .containerContact__title {
   grid-area: title;
   margin-bottom: 28px; }
 
-.lastReleases .tituloSeccion, .lastReleases .sectionMusicHome__title--margin, .lastReleases .sectionGalleryHome__title--margin {
-  grid-area: title; }
-
-.spotify .tituloSeccion, .spotify .sectionMusicHome__title--margin, .spotify .sectionGalleryHome__title--margin {
-  grid-area: title; }
-
-.spotifyPlayer {
-  min-height: 400px; }
-
-/* ---------- TERMINA GRID VISTA MUSICA ---------- */
-/* ---------- EMPIEZA GRID VISTA GALERIA --------- */
 .gridGallery {
   width: 100%;
   display: grid;
@@ -387,166 +339,61 @@ ul {
   margin-top: 100px;
   grid-template-areas: "banner banner banner banner banner banner banner banner banner banner banner banner" "images images images images images images images images images images images images" "videos videos videos videos videos videos videos videos videos videos videos videos" "footer footer footer footer footer footer footer footer footer footer footer footer"; }
 
-#containerGalleryPhotos {
+.galleryPhotos {
   grid-area: images;
   padding: 0; }
+  .galleryPhotos__title {
+    margin-left: 10%; }
+  .galleryPhotos__photo {
+    filter: brightness(80%);
+    width: 100%;
+    margin: auto; }
+    .galleryPhotos__photo:hover {
+      filter: brightness(100%); }
 
-#containerGalleryPhotos .tituloSeccion, #containerGalleryPhotos .sectionMusicHome__title--margin, #containerGalleryPhotos .sectionGalleryHome__title--margin {
-  margin-left: 10%; }
-
-#containerGalleryVideos {
+.galleryVideos {
   grid-area: videos;
   padding: 0;
   grid-column-start: 2;
   grid-column-end: 12; }
+  .galleryVideos__video {
+    width: 450px;
+    max-width: 90%;
+    height: 235px;
+    margin: auto;
+    margin-bottom: 20px; }
 
-.video {
-  width: 450px;
-  max-width: 90%;
-  height: 235px;
-  margin: auto;
-  margin-bottom: 20px; }
-
-/* ---------- TERMINA GRID VISTA GALERIA ---------- */
 section a {
   text-align: center;
   margin: auto; }
 
-.miniPhoto {
-  width: 25%;
-  margin: 0px;
-  float: left; }
-
-.clearDiv {
-  clear: both; }
-
-.emailContact {
-  color: #333333;
-  font-weight: 600;
-  font-size: 21px;
-  text-decoration: none;
-  font-family: Poppins;
-  font-style: normal;
-  line-height: 84.3%; }
-
-.btnContact {
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 24px;
-  background: #333333;
-  color: #FFFFFF;
-  border-radius: 5px; }
-
-#btnEnviar {
-  margin: 0px;
-  width: fit-content;
-  padding: 12px 60px;
-  border: none; }
-
-#btnReset {
-  margin: 0px;
-  width: fit-content;
-  padding: 12px 60px;
-  border: none; }
-
-form fieldset label {
-  font-size: 24px;
-  font-weight: 600;
-  color: #333333; }
-
-.mainContainer {
-  margin-top: 100px; }
-
-.centerTwoDiv {
-  max-width: 650px;
-  text-align: center;
-  margin: auto; }
-
-.lastReleases {
-  grid-area: lastRelease;
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: 148px auto auto;
-  column-gap: 20px;
-  margin-left: 14%;
-  grid-template-areas: "title title title title title title" "releaseLeft1 releaseLeft1 releaseMid1 releaseMid1 releaseRight1 releaseRight1" "releaseLeft2 releaseLeft2 releaseMid2 releaseMid2 releaseRight2 releaseRight2"; }
-
-.spotify {
-  grid-area: spotify;
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: 148px auto;
-  column-gap: 20px;
-  grid-template-areas: "title title title title title title" "player player player player player player";
-  grid-column-end: 12; }
-
-.coverAlbums {
-  width: 250px;
-  height: 250px;
-  margin-right: 30px;
-  margin-bottom: 50px;
-  margin-left: 30px; }
-
-.miniPhotoGallery {
-  width: 100%;
-  margin: auto; }
-
-.videoGallery {
-  width: 450px;
-  height: 235px;
-  margin: 0px 15px;
-  margin-bottom: 30px; }
-
-.centerAllWidht {
-  width: 100%;
-  text-align: center; }
-
-.socialMediaContact {
-  width: 40%;
-  max-width: 650px;
-  float: left;
-  text-align: left; }
-
-.formContact {
-  width: 60%;
-  max-width: 650px;
-  float: right;
-  text-align: right; }
-
-.formContact input, select, textarea {
-  width: 50%;
-  padding: 0px;
-  margin: 0px;
-  margin-right: 30px; }
-
-/* ---------- BOOTSTRAP ---------- */
-#containerReleasesAndSpotify {
+.releasesAndSpotify {
   grid-area: releaseAndSpotify;
   padding: 0;
   grid-column-start: 2;
   grid-column-end: 12; }
-  #containerReleasesAndSpotify .miniCoverReleases {
+  .releasesAndSpotify__cover {
     filter: brightness(70%);
     width: 90%;
     max-width: 190px;
     margin-bottom: 15px; }
-    #containerReleasesAndSpotify .miniCoverReleases:hover {
+    .releasesAndSpotify__cover:hover {
       transform: scale(1.1);
       transition-duration: 200ms;
       filter: brightness(100%); }
+  .releasesAndSpotify__spotifyPlayer {
+    min-height: 400px; }
 
-#containerDiscography {
+.discography {
   grid-area: discography;
   padding: 0;
   grid-column-start: 2;
   grid-column-end: 12; }
-  #containerDiscography .miniAlbumHome {
+  .discography__miniCover {
     filter: brightness(70%);
     width: 90%;
     margin-bottom: 16px; }
-    #containerDiscography .miniAlbumHome:hover {
+    .discography__miniCover:hover {
       transform: scale(1.1);
       transition-duration: 200ms;
       filter: brightness(100%); }
@@ -558,7 +405,6 @@ form fieldset label {
   margin: 0;
   --bs-gutter-x:0; }
 
-/* ---------- COMIENZA GRID CONTACT ----------*/
 .gridContact {
   width: 100%;
   display: grid;
@@ -568,24 +414,27 @@ form fieldset label {
   margin-top: 100px;
   grid-template-areas: "banner banner banner banner banner banner banner banner banner banner banner banner" "main main main main main main main main main main main main" "footer footer footer footer footer footer footer footer footer footer footer footer"; }
 
-#containerMainContact {
+.containerContact {
   grid-area: main;
   padding: 0;
   grid-column-start: 2;
   grid-column-end: 12; }
-
-.socialMediaIcons {
-  margin-top: 20px; }
-  .socialMediaIcons a {
-    margin: 0px 15px; }
-  .socialMediaIcons img {
-    height: 32px; }
+  .containerContact__email {
+    color: #333333;
+    font-weight: 600;
+    font-size: 21px;
+    text-decoration: none;
+    font-family: Poppins;
+    font-style: normal;
+    line-height: 84.3%; }
 
 .form-control {
-  width: calc(100% - 1.5rem); }
+  width: calc(100% - 1.5rem);
+  font-family: Poppins; }
 
 .form-select {
-  width: calc(100% - 3rem); }
+  width: calc(100% - 3rem);
+  font-family: Poppins; }
 
 .col-form-label {
   text-align: right; }
@@ -702,7 +551,9 @@ form label {
   .tourTable__buyDesktop {
     display: none; }
   .tourTable__icoTicketMobile {
-    display: block; } }
+    display: block; }
+  .col-form-label {
+    text-align: left; } }
 
 @media only screen and (max-width: 425px) {
   .header {
@@ -716,7 +567,7 @@ form label {
     column-gap: 10px; }
   .sectionTour {
     grid-area: tour; }
-  .sectionTour .tituloSeccion, .sectionTour .sectionMusicHome__title--margin, .sectionTour .sectionGalleryHome__title--margin {
+  .sectionTour .tituloSeccion, .sectionTour .sectionMusicHome__title--margin, .sectionTour .sectionGalleryHome__title--margin, .sectionTour .galleryPhotos__title, .sectionTour .galleryVideos__title, .sectionTour .releasesAndSpotify__title, .sectionTour .discography__title, .sectionTour .containerContact__title {
     margin-top: 20px;
     margin-bottom: 20px;
     margin-left: 10%; }
