--- a/scss/style.scss
+++ b/scss/style.scss
@@ -30,10 +30,12 @@ nav a{
     font-size: 16px;
     font-weight: 600;
 }
+
 .topPageAnchor{
     top: 0;
     position: absolute;
 }
+
 ul{
     margin: 0;
     padding: 0;
@@ -54,7 +56,6 @@ ul{
                         "footer footer footer footer footer footer footer footer footer footer footer footer";
 }
 
-/* ---------- COMIENZA HEADER SCSS ---------- */
 .header{
     width: 100%;
     height: 100px;
@@ -121,9 +122,7 @@ ul{
         }
     }
 }
-/* ---------- TERMINA HEADER SCSS ---------- */
 
-/* ---------- COMIENZA BANNER SCSS ---------- */
 .banner{
     grid-area: banner;
 
@@ -133,9 +132,11 @@ ul{
         object-fit: cover;
     }
 }
-/* ---------- TERMINA BANNER SCSS ---------- */
 
-/* ---------- EMPIEZA FOOTER SCSS ---------- */
+.bannerHome{
+    grid-area: banner;
+}
+
 .footer{
     background-color: $colorBlackDark;
     color: $colorWhite;
@@ -181,30 +182,14 @@ ul{
         grid-area: upArrow;
     }
 }
-/* ---------- TERMINA FOOTER SCSS ---------- */
 
-.mainHome{
-    margin-top: 100px;
-}
-
-/* ---------- COMIENZA BANNER ---------- */
-.bannerHome{
-    grid-area: banner;
-}
-/* ---------- TERMINA BANNER ---------- */
-
-/* ---------- EMPIEZA SECCION TOUR EN HOME ---------- */
 .sectionTour{
     background-color: $colorWhite;
     grid-column-start: 2;
     grid-column-end: 12;
     
 }
-.centerDiv{
-    width: 100%;
-    text-align: center;
-    margin: auto;
-}
+
 .tituloSeccion{
     font-family: Poppins;
     font-style: normal;
@@ -215,6 +200,7 @@ ul{
     margin-top: 30px;
     margin-bottom: 48px;
 }
+
 .tourTable{
     width: 100%;
     text-align: center;
@@ -280,13 +266,13 @@ ul{
         display: none;
     }
 }
-/* ---------- TERMINA SECCION TOUR EN HOME ---------- */
 
 .showMore{
     text-align: center;
     margin-top: 20px;
     margin-bottom: 20px;
 }
+
 .showMoreTitle{
     font-family: Poppins;
     font-style: normal;
@@ -302,7 +288,6 @@ ul{
     }
 }
 
-/* ---------- EMPIEZA SECCION DE MUSICA EN HOME ---------- */
 .sectionMusicHome{
     background-color: $colorSectionBg;
     grid-area: music;
@@ -368,12 +353,6 @@ ul{
     }
 }
 
-/* ---------- TERMINA SECCION DE MUSICA EN HOME ---------- */
-
-
-
-
-/* ---------- EMPIEZA SECCION DE GALERIA EN HOME ---------- */
 .sectionGalleryHome{
     grid-area: gallery;
     display: grid;
@@ -439,9 +418,7 @@ ul{
         }
     }
 }
-/* ---------- TERMINA SECCION DE GALERIA EN HOME ---------- */
 
-/* ---------- COMIENZA GRID VISTA TOUR ---------- */
 .gridTour{
     width: 100%;
     display: grid;
@@ -455,10 +432,6 @@ ul{
                         "footer footer footer footer footer footer footer footer footer footer footer footer";
 }
 
-/* ---------- TERMINA GRID VISTA TOUR ---------- */
-
-
-/* ---------- COMIENZA GRID VISTA MUSICA ---------- */
 .gridMusic{
     width: 100%;
     display: grid;
@@ -473,40 +446,11 @@ ul{
                         "footer footer footer footer footer footer footer footer footer footer footer footer";
 }
 
-.sectionDiscography{
-    background-color: $colorSectionBg;
-    grid-area: discography;
-    display: grid;
-    grid-template-columns: repeat(14, 1fr);
-    grid-template-rows: auto auto auto;
-    column-gap: 20px;
-    row-gap: 20px;
-    grid-template-areas: 
-                        "marginLeft title title title title title title title title title title title title marginRight"
-                        "marginLeft1 photoLeft1 photoLeft1 photoLeft1 photoLeftMid1 photoLeftMid1 photoLeftMid1 photoRightMid1 photoRightMid1 photoRightMid1 photoRight1 photoRight1 photoRight1 marginRight1"
-                        "marginLeft2 photoLeft2 photoLeft2 photoLeft2 photoLeftMid2 photoLeftMid2 photoLeftMid2 photoRightMid2 photoRightMid2 photoRightMid2 photoRight2 photoRight2 photoRight2 marginRight2"
-                        "marginLeft3 photoLeft3 photoLeft3 photoLeft3 photoLeftMid3 photoLeftMid3 photoLeftMid3 photoRightMid3 photoRightMid3 photoRightMid3 photoRight3 photoRight3 photoRight3 marginRight3";
-    align-items: center;
-    margin-bottom: 40px;
-}
 .sectionDiscography .tituloSeccion{
     grid-area: title;
     margin-bottom: 28px;
 }
 
-.lastReleases .tituloSeccion{
-    grid-area: title;
-}
-.spotify .tituloSeccion{
-    grid-area: title;
-}
-
-.spotifyPlayer{
-    min-height: 400px;
-}
-/* ---------- TERMINA GRID VISTA MUSICA ---------- */
-
-/* ---------- EMPIEZA GRID VISTA GALERIA --------- */
 .gridGallery{
     width: 100%;
     display: grid;
@@ -520,191 +464,87 @@ ul{
                         "videos videos videos videos videos videos videos videos videos videos videos videos"
                         "footer footer footer footer footer footer footer footer footer footer footer footer";
 }
-#containerGalleryPhotos{
+
+.galleryPhotos{
     grid-area: images;
     padding: 0;
+
+    &__title{
+        @extend .tituloSeccion;
+        margin-left: 10%;
+    }
+    &__photo{
+        @include photoBrightnessFilter(80%);
+        width: 100%;
+        margin: auto;
+
+        &:hover{
+            @include photoBrightnessFilter(100%);
+        }
+    }
 }
-#containerGalleryPhotos .tituloSeccion{
-    margin-left: 10%;
-}
-#containerGalleryVideos{
+
+.galleryVideos{
     grid-area: videos;
     padding: 0;
     grid-column-start: 2;
     grid-column-end: 12;
-}
-.video{
-    width: 450px;
-    max-width: 90%;
-    height: 235px;
-    margin: auto;
-    margin-bottom: 20px;
-}
 
-/* ---------- TERMINA GRID VISTA GALERIA ---------- */
+    &__title{
+        @extend .tituloSeccion;
+    }
+    &__video{
+        width: 450px;
+        max-width: 90%;
+        height: 235px;
+        margin: auto;
+        margin-bottom: 20px;
+    }
+}
 
 section a{
     text-align: center;
     margin: auto;
 }
 
-.miniPhoto{
-    width: 25%;
-    margin: 0px;
-    float: left;
-}
-
-.clearDiv{
-    clear: both;
-}
-.emailContact{
-    color: $colorBlackLight;
-    font-weight: 600;
-    font-size: 21px;
-    text-decoration: none;
-    font-family: Poppins;
-    font-style: normal;
-    line-height: 84.3%;
-}
-.btnContact{
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 24px;
-    background: $colorBlackLight;
-    color: $colorWhite;
-    border-radius: 5px;
-}
-
-#btnEnviar{
-    margin: 0px;
-    width: fit-content;
-    padding: 12px 60px;
-    border: none;
-}
-
-#btnReset{
-    margin: 0px;
-    width: fit-content;
-    padding: 12px 60px;
-    border: none;
-}
-
-form fieldset label{
-    font-size: 24px;
-    font-weight: 600;
-    color: $colorBlackLight;
-}
-
-.mainContainer{
-    margin-top: 100px;
-}
-
-.centerTwoDiv{
-    max-width: 650px;
-    text-align: center;
-    margin: auto;
-}
-
-.lastReleases{
-    grid-area: lastRelease;
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: 148px auto auto;
-    column-gap: 20px;
-    margin-left: 14%;
-    grid-template-areas:
-                        "title title title title title title"
-                        "releaseLeft1 releaseLeft1 releaseMid1 releaseMid1 releaseRight1 releaseRight1"
-                        "releaseLeft2 releaseLeft2 releaseMid2 releaseMid2 releaseRight2 releaseRight2";
-}
-
-.spotify{
-    grid-area: spotify;
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: 148px auto;
-    column-gap: 20px;
-    grid-template-areas:
-                        "title title title title title title"
-                        "player player player player player player";
-    grid-column-end: 12;
-}
-
-.coverAlbums{
-    width: 250px;
-    height: 250px;
-    margin-right: 30px;
-    margin-bottom: 50px;
-    margin-left: 30px;
-}
-
-.miniPhotoGallery{
-    width: 100%;
-    margin: auto;
-}
-
-.videoGallery{
-    width: 450px;
-    height: 235px;
-    margin: 0px 15px;
-    margin-bottom: 30px;
-}
-
-.centerAllWidht{
-    width: 100%;
-    text-align: center;
-}
-
-.socialMediaContact{
-    width: 40%;
-    max-width: 650px;
-    float: left;
-    text-align: left;
-}
-
-.formContact{
-    width: 60%;
-    max-width: 650px;
-    float: right;
-    text-align: right;
-}
-
-.formContact input, select, textarea{
-    width: 50%;
-    padding: 0px;
-    margin: 0px;
-    margin-right: 30px;
-}
-
-/* ---------- BOOTSTRAP ---------- */
-#containerReleasesAndSpotify{
+.releasesAndSpotify{
     grid-area: releaseAndSpotify;
     padding: 0;
     grid-column-start: 2;
     grid-column-end: 12;
 
-    .miniCoverReleases{
-        @include photoBrightnessFilter(70%);
+    &__title{
+        @extend .tituloSeccion;
+    }
 
+    &__cover{
+        @include photoBrightnessFilter(70%);
         width: 90%;
         max-width: 190px;
         margin-bottom: 15px;
+
         &:hover{
             @include miniPhotoAnimation(1.1,200ms);
             @include photoBrightnessFilter(100%);
         }
     }
+
+    &__spotifyPlayer{
+        min-height: 400px;
+    }
 }
 
-#containerDiscography{
+.discography{
     grid-area: discography;
     padding: 0;
     grid-column-start: 2;
     grid-column-end: 12;
+
+    &__title{
+        @extend .tituloSeccion;
+    }
     
-    .miniAlbumHome{
+    &__miniCover{
         @include photoBrightnessFilter(70%);
 
         width: 90%;
@@ -725,7 +565,6 @@ form fieldset label{
     --bs-gutter-x:0;
 }
 
-/* ---------- COMIENZA GRID CONTACT ----------*/
 .gridContact{
     width: 100%;
     display: grid;
@@ -738,29 +577,36 @@ form fieldset label{
                         "main main main main main main main main main main main main"
                         "footer footer footer footer footer footer footer footer footer footer footer footer";
 }
-#containerMainContact{
+
+.containerContact{
     grid-area: main;
     padding: 0;
     grid-column-start: 2;
     grid-column-end: 12;
-}
 
-.socialMediaIcons{
-    margin-top: 20px;
-    a{
-        margin: 0px 15px;
+    &__title{
+        @extend .tituloSeccion;
     }
-    img{
-        height: 32px;
+
+    &__email{  
+        color: $colorBlackLight;
+        font-weight: 600;
+        font-size: 21px;
+        text-decoration: none;
+        font-family: Poppins;
+        font-style: normal;
+        line-height: 84.3%;
     }
 }
 
 .form-control{
     width: calc(100% - 1.5rem);
+    font-family: Poppins;
 }
 
 .form-select{
     width: calc(100% - 3rem);
+    font-family: Poppins;
 }
 
 .col-form-label{
@@ -777,6 +623,7 @@ form label{
     font-style: normal;
     line-height: 84.3%;
 }
+
 
 
 
@@ -936,7 +783,13 @@ form label{
             display: block;
         }
     }
+
+    .col-form-label{
+        text-align: left;
+    }
 }
+
+
 
 
 @media only screen and (max-width: 425px){
@@ -958,14 +811,17 @@ form label{
                             "footer footer footer footer footer footer footer footer";
         column-gap: 10px;
     }
+
     .sectionTour{
         grid-area: tour;
     }
+
     .sectionTour .tituloSeccion{
         margin-top: 20px;
         margin-bottom: 20px;
         margin-left: 10%;
     }
+    
     .tourTable{
         width: 80%;
         margin: auto;
